Libidn NEWS -- History of user-visible changes.                 -*- outline -*-
Copyright (C) 2002, 2003, 2004 Simon Josefsson
See the end for copying conditions.

* Version 0.5.9 (unreleased)

* Version 0.5.8 (released 2004-10-12)

** BidiMirroring-3.2.0.txt is now included, not only the generated source code.
This allow builds to succeed after 'make realclean'.

** Generated files now have consistent 'DO NOT EDIT!' comments.

** API and ABI is backwards compatible with the previous version.

* Version 0.5.7 (released 2004-10-12)

** Shared library version incremented, because new APIs were added.
This was forgotten in the last release.

** French translation updated.

** Minor bug fixes.

** API and ABI is backwards compatible with the previous version.

* Version 0.5.6 (released 2004-10-02)

** Added functions to convert return codes to human readable text.

** Now using GNULib in command line front end (src/) for portability code.
See <http://www.gnu.org/software/gnulib/> for more information on
GNULib.  This should make the code easier to read and maintain.

** API and ABI is backwards compatible with the previous version.
idna_strerror: ADD.
pr29_strerror: ADD.
punycode_strerror: ADD.
stringprep_strerror: ADD.
tld_strerror: ADD.
TLD_NO_TLD: ADD.  Replaces TLD_NOTLD.
TLD_NOTLD: DEPRECATED.  Use TLD_NO_TLD instead.

* Version 0.5.5 (released 2004-09-13)

** Hide accidentally exported variable g_utf8_skip, by marking it as static.

** Various fixes.

** API and ABI is backwards compatible with the previous version.
g_utf8_skip: REMOVED.  (But never meant to be used.)

* Version 0.5.4 (released 2004-08-08)

** Translation updates.

** API and ABI is backwards compatible with the previous version.

* Version 0.5.3 (released 2004-08-05)

** Fix crash in `idn --tld' command line tool.

** API and ABI is backwards compatible with the previous version.

* Version 0.5.2 (released 2004-07-14)

** Java "make install" rules are now DESTDIR compatible.
